<resources>
    <string name="app_name">RandomGenerator2024</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="first_fragment_label">Random Generator 2024</string>
    <string name="second_fragment_label">Random Number Screen</string>

    <string name="random">RANDOM</string>
    <string name="count">COUNT</string>
    <string name="toast">TOAST</string>
    <string name="reset">RESET</string>
    <string name="back">BACK</string>
    <string name="message">Here is a random number between 0 and . . .</string>
    <string name="max_number">0</string>

    <string name="number"> 0 </string>
</resources>